[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-throttle"
version = "1.0.0"
description = "Adaptive throttling for LLM API calls — detects 429s and slow responses, adjusts pacing automatically."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "throttle", "rate-limit", "backoff", "openai", "anthropic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3"]

[project.urls]
Homepage = "https://github.com/example/agent-throttle"
Repository = "https://github.com/example/agent-throttle"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
